# TwinCATAUTDServer

./: .gitignore  CpuBaseTime.cs  Makefile.toml  Program.cs  README.md  SetupTwinCAT.cs  TwinCATAUTDServer.csproj  TwinCATAUTDServer.sln  TwinCATVersion.cs  packages.config
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: release.yml
Properties/: AssemblyInfo.cs
TwinCATAUTDServer/: CpuBaseTime.cs  ItemTypes.cs  Program.cs  README.md  SetupTwinCAT.cs  SyncMode.cs  TwinCATAUTDServer.csproj  TwinCATAUTDServer.sln  packages.config
lightweight/: Cargo.toml  ThirdPartyNotice.txt
lightweight/src/: log_formatter.rs  main.rs
tools/license-checker/: Cargo.toml
tools/license-checker/src/: main.rs
