[package]
name = "TwinCATAUTDServerLightweight"
version = "32.1.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"
license = "MIT"

description = "AUTDServer"
repository = "https://github.com/shinolab/TwinCATAUTDServer"
readme = "README.md"
keywords = ["autd"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
autd3-protobuf = { version = "32.1.1", features = ["lightweight", "async-trait"] }
autd3-link-twincat = { version = "32.1.1", features = ["async-trait"] }
anyhow = "1.0.98"
ctrlc = "3.4.6"
tonic = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.40"
tracing-core = "0.1.33"
